# wallstreet_bois

./: Cargo.toml  README.md
src/: all_stocks.rs  companies.rs  investors.rs  main.rs  market.rs  timer.rs
src/companies/: balance_sheet.rs  cash_flow_statement.rs  sector.rs
src/investors/: investor_traits.rs
src/market/: chart.rs  stock.rs  timer.rs
